package ch12_03;

/**
 * program: java-learn->IProxy
 * description:
 * author: gerry
 * created: 2020-03-19 11:49
 **/
public interface IProxy {
    /**
     * 计算费用
     */
    public void count();
}
